@@ -121,7 +121,7 @@ public class DefaultGCCDependencyCalculatorPreBuildCommands implements IManagedD
 						new FileContextData(sourceLocation, outputLocation,
 								null, tool)).length > 0;
 
-		if (needExplicitRuleForFile) genericCommands = new Boolean(false);
+		if (needExplicitRuleForFile) genericCommands = Boolean.valueOf(false);
 	}
 
 	/**
@@ -158,14 +158,14 @@ public class DefaultGCCDependencyCalculatorPreBuildCommands implements IManagedD
 		if (genericCommands != null) return genericCommands.booleanValue();
 		//  If the context is a Configuration, yes
 		if (buildContext instanceof IConfiguration || buildContext instanceof IFolderInfo) {
-			genericCommands = new Boolean(true);
+			genericCommands = Boolean.valueOf(true);
 			return true;
 		}
 		//  If the context is a Resource Configuration, determine if it overrides any
 		//  of its parent configuration's options that would affect dependency file
 		//  generation.
 		// TODO
-		genericCommands = new Boolean(false);
+		genericCommands = Boolean.valueOf(false);
 		return false;
 	}
 
